[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "delay-timer"
version = "0.0.1760910042"
description = "Python class to use in delay loops"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = []
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/delay-timer"

[project.scripts]
delay-timer-test = "delay_timer.delay_timer_test:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false
